--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/PravincyGp/catpack",
+  "repository": "https://github.com/Gp-Public/Rosicatuserbot",
   "website": "#TODO",
   "success_url": "#TODO",
   "env": {
